          though most other media types are acceptable like JSON, XML.
        - Fixed bug in ServerResource when content negotiation was
          disabled, all non standard methods where invoking the OPTIONS
          method. 
        - Fixed ClientResource to throw ResourceException upon error
          as specified in Javadocs. Reported by Patrick Logan.
    - Enhancements
        - Improved JAXB converted. Contributed by Sanjay Acharya.
        - Upgraded Apache Commons Logging to version 1.1.1.
        - Added library jcip-annotations 1.0.
        - ServerSevlet now automatically supports the declaration of 
          several adapters in the same web.xml. Reworked the Javadocs
          to encourage usage of Servlet init parameters instead of
          context parameters.
        - Refactored connector extensions to move implementation 
          classes in "internal" packages hidden from the Javadocs.
        - Upgraded Jetty to version 7.0.0.
        - The default status page and directory listings are now using
          a sans-serif font.
 
- 2.0 Milestone 5 (2009-09-28)
    - API changes
        - Moved Message, Request and Response classes from the
          org.restlet.data to the org.restlet package as they are
          core artifacts of the API used in Uniform interface.
        - Deprecated Redirector.MODE_DISPATCHER to introduce support
          for MODE_CLIENT_DISPATCHER and MODE_SERVER_DISPATCHER.
        - ServerResource#getPreferredVariant() is now protected.
        - Moved Template and Variable classes from "org.restlet.util"
          to "org.restlet.routing" package.
        - Moved Restlet#handle(Request) method to Client class.
        - Added "inboundRoot" and "outboundRoot" properties to 
          Application and deprecated the "root" property and the 
          createRoot() method. The outbound root, is the hook for 
          client-side routing and points by default to the context's 